# cricketcoach

./: .env.example  .gitignore  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  require-tests.yml
balltracker_trainer/ball-detector/: README.md  pyproject.toml  requirements.txt
balltracker_trainer/ball-detector/configs/: cricket_ball.yaml  inference_config.yaml  sahi_config.yaml  training_config.yaml
balltracker_trainer/ball-detector/data/: README.md  augment_motion_blur.py  prepare_dataset.py  preprocess_by_color.py  validate_annotations.py
balltracker_trainer/ball-detector/scripts/: evaluate.py  export_model.py  sahi_inference.py  train.py  (+2 more)
balltracker_trainer/bowler-pose/: .gitignore  README.md  pyproject.toml  requirements.txt
balltracker_trainer/bowler-pose/configs/: cricket_pose.yaml  training_config.yaml
balltracker_trainer/bowler-pose/data/: README.md  prepare_dataset.py  validate_annotations.py
balltracker_trainer/bowler-pose/scripts/: auto_label.py  evaluate.py  export_model.py  train.py  visualize.py
balltracker_trainer/tools/: README.md  download_videos.py  extract_frames.py  requirements.txt  video_catalog.yaml
middleware/: Dockerfile  docker-entrypoint.sh  pom.xml
req_docs/: Delivery_Plan_AI_Cricket_Coach_MVP.md  ERD_AI_Cricket_Coach_MVP.md  PRD_AI_Cricket_Coach_MVP.md
speedtracking-api/: Dockerfile  README.md  requirements-dev.txt  requirements.txt
speedtracking-api/app/: config.py  main.py  pipeline.py  schemas.py  services.py
speedtracking-api/tests/: test_pipeline.py
tests/: test_compose.sh
(+24 files in other folders)
